--- a/Web_code/locales/locales/ar/common.json
+++ b/Web_code/locales/locales/ar/common.json
@@ -63,43 +63,6 @@
   "days": "أيام",
   "sign_up": "إنشاء حساب",
   "my_dashboard": "لوحة التحكم",
-  "host_dashboard": "لوحة المضيف",
-  "manage_properties": "إدارة العقارات",
-  "manage_reservations": "إدارة الحجوزات",
-  "add_new_property": "إضافة عقار جديد",
-  "remove_all_filters": "إزالة جميع الفلاتر",
-  "agree": "موافقة",
-  "new_password": "كلمة المرور الجديدة",
-  "confirm_password": "تأكيد كلمة المرور",
-  "update_password": "تحديث كلمة المرور",
-  "previous": "السابق",
-  "next": "التالي",
-  "host_request_title": "طلب أن تصبح مضيفاً",
-  "full_name": "الاسم الكامل",
-  "email": "البريد الإلكتروني",
-  "phone": "رقم الهاتف",
-  "company_name": "اسم الشركة",
-  "company_website": "موقع الشركة",
-  "id_card_number": "رقم بطاقة الهوية",
-  "national_id": "رقم وطني",
-  "personal_id": "بطاقة شخصية",
-  "send_request": "إرسال الطلب",
-  "cancel": "إلغاء",
-  "view_details": "عرض التفاصيل",
-  "approve": "موافقة",
-  "reject": "رفض",
-  "you": "أنت",
-  "detailed_ratings": "التقييمات المفصلة",
-  "cleanliness": "النظافة",
-  "accuracy": "الدقة",
-  "check_in": "تسجيل الدخول",
-  "communication": "التواصل",
-  "location": "الموقع",
-  "value": "القيمة",
-  "refresh_data": "تحديث البيانات",
-  "loading": "تحميل...",
-  "delete": "حذف",
-  "edit": "تحرير",
   "back_to_cozy": "العودة إلى كوزي",
   "booked_by": "محجوز بواسطة:",
   "price_min_error": "يجب أن يكون السعر 1 على الأقل",
@@ -464,7 +427,7 @@
     "subtitle": "للإقامة في ليبيا",
     "description": "ابحث عن أماكن إقامة فريدة، شقق، فيلات، ومنازل في جميع أنحاء ليبيا",
     "search_button": "ابدأ البحث",
-    "rent_button": "أصبح مضيفاً"
+    "rent_button": "اعرض عقارك"
   },
   "filter_results": {
     "title": "نتائج البحث",
@@ -592,13 +555,6 @@
     "deleting": "جاري الحذف...",
     "updating": "جاري التحديث..."
   },
-  "validation": {
-    "required": "هذا الحقل مطلوب",
-    "invalid_email": "البريد الإلكتروني غير صحيح",
-    "password_min": "كلمة المرور يجب أن تكون 8 أحرف على الأقل",
-    "password_match": "كلمات المرور غير متطابقة",
-    "invalid_phone": "رقم الهاتف غير صحيح"
-  },
   "notifications": {
     "success": "تم بنجاح!",
     "error": "حدث خطأ!",
@@ -717,7 +673,9 @@
     "tip_description": "كن محدداً بشأن المرافق ونقاط القوة في الموقع وما يمكن للضيوف توقعه",
     "tip_pricing": "💡 نصيحة: ابحث عن عقارات مماثلة في منطقتك لتحديد سعر تنافسي",
     "create_listing_header": "إنشاء إعلانك",
-    "create_listing_subheader": "دعنا نجعل عقارك جاهزاً للضيوف"
+    "create_listing_subheader": "دعنا نجعل عقارك جاهزاً للضيوف",
+    "price_help": "أدخل السعر بالدينار الليبي (أرقام فقط)",
+    "selected_category": "الفئة المختارة:"
   },
   "reviews": {
     "title": "التقييمات",
@@ -805,29 +763,167 @@
     "error_message": "فشل في إرسال الرسالة. يرجى المحاولة مرة أخرى."
   },
   "invoice_details": "تفاصيل الفاتورة",
-  "host_request_description": "املأ النموذج أدناه وسنراجع طلبك قريباً",
-  "request_type": "نوع الطلب",
-  "personal": "شخصي",
-  "business_or_office": "شركة أو مكتب",
-  "company_information": "معلومات الشركة",
-  "identity_information": "معلومات الهوية",
-  "id_card_type": "نوع بطاقة الهوية",
-  "enter_national_id": "أدخل الرقم الوطني",
-  "enter_personal_id": "أدخل رقم البطاقة الشخصية",
-  "note": "ملاحظة",
-  "company_note": "تأكد من صحة معلومات الشركة وموقعها الإلكتروني.",
-  "identity_note": "تأكد من صحة رقم الهوية المدخل.",
-  "fill_required_fields": "يرجى ملء جميع الحقول المطلوبة",
-  "fill_company_fields": "يرجى ملء جميع حقول الشركة",
-  "fill_identity_fields": "يرجى ملء جميع حقول الهوية",
-  "request_sent_successfully": "تم إرسال طلبك بنجاح! سنراجع طلبك قريباً",
-  "error_sending_request": "حدث خطأ أثناء إرسال الطلب",
-  "company_website_placeholder": "https://example.com",
+  "confirm_role_change_title": "تأكيد تغيير الدور",
+  "confirm_role_change_message": "هل تريد حقاً تغيير دور المستخدم إلى",
+  "confirm_delete_title": "تأكيد الحذف",
+  "confirm_delete_message": "هل أنت متأكد أنك تريد حذف هذا المستخدم؟",
+  "user_deleted_successfully": "تم حذف المستخدم بنجاح",
+  "error_deleting_user": "حدث خطأ أثناء حذف المستخدم",
+  "admin": "مدير",
+  "user": "زائر",
+  "guest": "زائر",
+  "host": "مضيف",
+  "pending_review": "قيد المراجعة",
+  "rejected": "مرفوض",
+  "host_dashboard": {
+    "title": "لوحة تحكم المضيف",
+    "subtitle": "مرحباً بك في لوحة تحكم المضيف الخاصة بك",
+    "manage_properties_title": "إدارة العقارات",
+    "manage_properties_description": "عرض وتعديل وحذف عقاراتك",
+    "manage_reservations_title": "إدارة الحجوزات",
+    "manage_reservations_description": "عرض وتأكيد وإلغاء الحجوزات",
+    "add_property_title": "إضافة عقار جديد",
+    "add_property_description": "أضف عقاراً جديداً لقائمة عقاراتك",
+    "statistics_title": "الإحصائيات",
+    "properties_count": "عدد العقارات",
+    "total_reservations": "إجمالي الحجوزات",
+    "total_revenue": "إجمالي الإيرادات"
+  },
+  "manage_properties": "إدارة العقارات",
+  "manage_reservations": "إدارة الحجوزات",
+  "add_new_property": "إضافة عقار جديد",
+  "host_dashboard_button": "لوحة المضيف",
   "become_host": "أصبح مضيفاً",
-  "request_pending": "طلب قيد المراجعة",
-  "switch_to_guest": "التبديل إلى الضيف",
-  "switch_to_host": "التبديل إلى المضيف",
-  "request_rejected": "تم رفض الطلب",
-  "request_pending_message": "طلبك قيد المراجعة. سنتواصل معك قريباً!",
-  "request_rejected_message": "تم رفض طلبك. يرجى التواصل مع الإدارة."
+  "request_pending_message": "طلبك قيد المراجعة",
+  "request_rejected_message": "تم رفض طلبك",
+  "request_rejected": "طلب مرفوض",
+  "admin_dashboard": {
+    "title": "لوحة تحكم المدير",
+    "search_placeholder": "البحث في المستخدمين، العقارات، الحجوزات...",
+    "last_7_days": "آخر 7 أيام",
+    "last_30_days": "آخر 30 يوم",
+    "last_90_days": "آخر 90 يوم",
+    "all_time": "كل الوقت",
+    "auto_refresh": "تحديث تلقائي",
+    "refreshing": "جاري التحديث",
+    "refresh": "تحديث",
+    "total_users": "إجمالي المستخدمين",
+    "total_properties": "إجمالي العقارات",
+    "total_reservations": "إجمالي الحجوزات",
+    "total_payments": "إجمالي المدفوعات",
+    "revenue": "الإيرادات",
+    "reservations_by_month": "الحجوزات حسب الشهر",
+    "revenue_by_month": "الإيرادات حسب الشهر",
+    "line": "خط",
+    "bars": "أعمدة",
+    "latest_users": "أحدث المستخدمين",
+    "latest_properties": "أحدث العقارات",
+    "latest_reservations": "أحدث الحجوزات",
+    "latest_payments": "أحدث المدفوعات",
+    "from": "من",
+    "updating_dashboard": "جاري تحديث بيانات لوحة التحكم...",
+    "failed_to_load": "فشل في تحميل بيانات لوحة التحكم. يرجى المحاولة مرة أخرى.",
+    "failed_to_load_dashboard": "تعذر تحميل بيانات لوحة التحكم."
+  },
+  "admin_sidebar": {
+    "dashboard": "لوحة التحكم",
+    "dashboard_description": "نظرة عامة على النظام",
+    "users": "المستخدمين",
+    "users_description": "إدارة المستخدمين",
+    "properties": "العقارات",
+    "properties_description": "إدارة العقارات",
+    "reservations": "الحجوزات",
+    "reservations_description": "إدارة الحجوزات",
+    "payments": "المدفوعات",
+    "payments_description": "إدارة المدفوعات",
+    "host_requests": "طلبات المضيف",
+    "host_requests_description": "إدارة طلبات الانضمام كمضيف",
+    "user_menu": "قائمة المستخدم",
+    "user": "المستخدم",
+    "back_to_main_site": "العودة للموقع الرئيسي",
+    "back_to_site": "العودة للموقع",
+    "logout": "تسجيل الخروج",
+    "dashboard_cards": {
+      "users": "المستخدمين",
+      "properties": "العقارات",
+      "reservations": "الحجوزات",
+      "revenue": "الإيرادات",
+      "error_loading": "⚠️ حدث خطأ أثناء تحميل بطاقات الإحصائيات."
+    }
+  },
+  "admin_host_requests": {
+    "title": "طلبات الانضمام كمضيف",
+    "description": "إدارة طلبات المستخدمين للانضمام كمضيفين",
+    "no_requests": "لا توجد طلبات مضيف",
+    "no_requests_description": "لم يتم تقديم أي طلبات للانضمام كمضيف بعد.",
+    "user": "المستخدم",
+    "request_type": "نوع الطلب",
+    "full_name": "الاسم الكامل",
+    "email": "البريد الإلكتروني",
+    "phone": "رقم الهاتف",
+    "status": "الحالة",
+    "request_date": "تاريخ الطلب",
+    "details": "التفاصيل",
+    "actions": "الإجراءات",
+    "no_name": "بدون اسم",
+    "user_alt": "مستخدم",
+    "failed_to_load": "فشل في جلب طلبات المضيف"
+  },
+  "properties": {
+    "title": "عقاراتي",
+    "subtitle": "قائمة عقاراتك"
+  },
+  "refresh_data": "تحديث البيانات",
+  "request_pending": "قيد المراجعة",
+  "request_approved": "تمت الموافقة",
+  "personal": "شخصي",
+  "business_or_office": "عمل أو مكتب",
+  "not_specified": "غير محدد",
+  "remove_all_filters": "إزالة جميع الفلاتر",
+  "no_trips_found": "لم يتم العثور على رحلات",
+  "no_trips_subtitle": "يبدو أنك لم تحجز أي رحلات.",
+  "reservation_validation": {
+    "total_price_required": "السعر الإجمالي مطلوب",
+    "start_date_required": "تاريخ البدء مطلوب",
+    "end_date_required": "تاريخ الانتهاء مطلوب",
+    "days_required": "عدد الأيام مطلوب",
+    "listing_id_required": "معرف العقار مطلوب",
+    "listing_title_required": "عنوان العقار مطلوب",
+    "price_per_night_required": "السعر الليلي مطلوب",
+    "location_required": "الموقع مطلوب",
+    "image_required": "صورة العقار مطلوبة",
+    "user_id_required": "معرف المستخدم مطلوب",
+    "user_email_required": "بريد المستخدم مطلوب",
+    "user_name_required": "اسم المستخدم مطلوب",
+    "reservation_data_missing": "بيانات الحجز غير موجودة",
+    "user_data_required": "بيانات المستخدم مطلوبة",
+    "invalid_dates": "تواريخ غير صالحة"
+  },
+  "validation": {
+    "name_required": "الاسم مطلوب",
+    "name_min_length": "يجب أن يكون الاسم حرفين على الأقل",
+    "name_max_length": "يجب ألا يتجاوز الاسم 50 حرف",
+    "name_pattern": "يجب أن يحتوي الاسم على أحرف عربية أو إنجليزية فقط",
+    "email_required": "البريد الإلكتروني مطلوب",
+    "email_pattern": "يرجى إدخال بريد إلكتروني صحيح",
+    "email_max_length": "يجب ألا يتجاوز البريد الإلكتروني 100 حرف",
+    "password_required": "كلمة المرور مطلوبة",
+    "password_min_length": "يجب أن تكون كلمة المرور حرف واحد على الأقل",
+    "password_max_length": "يجب ألا تتجاوز كلمة المرور 128 حرف",
+    "confirm_password_required": "تأكيد كلمة المرور مطلوب",
+    "password_mismatch": "كلمات المرور غير متطابقة",
+    "password_strength_0": "ضعيفة جداً",
+    "password_strength_1": "ضعيفة",
+    "password_strength_2": "متوسطة",
+    "password_strength_3": "قوية",
+    "password_strength_4": "قوية جداً",
+    "title_required": "العنوان مطلوب",
+    "title_min_length": "يجب أن يكون العنوان 10 أحرف على الأقل",
+    "title_max_length": "يجب ألا يتجاوز العنوان 100 حرف",
+    "description_required": "الوصف مطلوب",
+    "description_min_length": "يجب أن يكون الوصف 20 حرف على الأقل",
+    "description_max_length": "يجب ألا يتجاوز الوصف 500 حرف",
+    "price_min": "يجب أن يكون السعر 1 دينار على الأقل",
+    "price_max": "يجب ألا يتجاوز السعر 10000 دينار"
+  }
 }
