--- a/Web_code/locales/locales/en/common.json
+++ b/Web_code/locales/locales/en/common.json
@@ -64,43 +64,6 @@
   "days": "Days",
   "sign_up": "Sign Up",
   "my_dashboard": "My Dashboard",
-  "host_dashboard": "Host Dashboard",
-  "manage_properties": "Manage Properties",
-  "manage_reservations": "Manage Reservations",
-  "add_new_property": "Add New Property",
-  "remove_all_filters": "Remove All Filters",
-  "agree": "Agree",
-  "new_password": "New Password",
-  "confirm_password": "Confirm Password",
-  "update_password": "Update Password",
-  "previous": "Previous",
-  "next": "Next",
-  "host_request_title": "Request to Become a Host",
-  "full_name": "Full Name",
-  "email": "Email",
-  "phone": "Phone Number",
-  "company_name": "Company Name",
-  "company_website": "Company Website",
-  "id_card_number": "ID Card Number",
-  "national_id": "National ID",
-  "personal_id": "Personal ID",
-  "send_request": "Send Request",
-  "cancel": "Cancel",
-  "view_details": "View Details",
-  "approve": "Approve",
-  "reject": "Reject",
-  "you": "You",
-  "detailed_ratings": "Detailed Ratings",
-  "cleanliness": "Cleanliness",
-  "accuracy": "Accuracy",
-  "check_in": "Check-in",
-  "communication": "Communication",
-  "location": "Location",
-  "value": "Value",
-  "refresh_data": "Refresh Data",
-  "loading": "Loading...",
-  "delete": "Delete",
-  "edit": "Edit",
   "back_to_cozy": "Back To Cozy",
   "booked_by": "Booked by:",
   "price_min_error": "Price must be at least 1",
@@ -441,7 +404,7 @@
     "subtitle": "to Stay in Libya",
     "description": "Find unique accommodations, apartments, villas, and homes throughout Libya",
     "search_button": "Start Searching",
-    "rent_button": "Become a Host"
+    "rent_button": "List Your Property"
   },
   "filter_results": {
     "title": "Search Results",
@@ -570,11 +533,31 @@
     "updating": "Updating..."
   },
   "validation": {
-    "required": "This field is required",
-    "invalid_email": "Invalid email address",
-    "password_min": "Password must be at least 8 characters",
-    "password_match": "Passwords do not match",
-    "invalid_phone": "Invalid phone number"
+    "name_required": "Name is required",
+    "name_min_length": "Name must be at least 2 characters",
+    "name_max_length": "Name must not exceed 50 characters",
+    "name_pattern": "Name must contain only Arabic or English letters",
+    "email_required": "Email is required",
+    "email_pattern": "Please enter a valid email address",
+    "email_max_length": "Email must not exceed 100 characters",
+    "password_required": "Password is required",
+    "password_min_length": "Password must be at least 1 character",
+    "password_max_length": "Password must not exceed 128 characters",
+    "confirm_password_required": "Confirm password is required",
+    "password_mismatch": "Passwords do not match",
+    "password_strength_0": "Very Weak",
+    "password_strength_1": "Weak",
+    "password_strength_2": "Fair",
+    "password_strength_3": "Strong",
+    "password_strength_4": "Very Strong",
+    "title_required": "Title is required",
+    "title_min_length": "Title must be at least 10 characters",
+    "title_max_length": "Title must not exceed 100 characters",
+    "description_required": "Description is required",
+    "description_min_length": "Description must be at least 20 characters",
+    "description_max_length": "Description must not exceed 500 characters",
+    "price_min": "Price must be at least 1 LYD",
+    "price_max": "Price must not exceed 10000 LYD"
   },
   "notifications": {
     "success": "Success!",
@@ -771,6 +754,8 @@
     "email_label": "Email Address",
     "email_placeholder": "Enter your email address",
     "email_required": "Email is required",
+    "password_required": "Password is required",
+    "confirm_password_required": "Confirm password is required",
     "email_invalid": "Please enter a valid email address",
     "message_label": "Message",
     "message_placeholder": "Tell us how we can help you...",
@@ -782,29 +767,135 @@
     "error_message": "Failed to send message. Please try again."
   },
   "invoice_details": " Invoice Details",
-  "host_request_description": "Fill out the form below and we'll review your request soon",
-  "request_type": "Request Type",
-  "personal": "Personal",
-  "business_or_office": "Company or Office",
-  "company_information": "Company Information",
-  "identity_information": "Identity Information",
-  "id_card_type": "ID Card Type",
-  "enter_national_id": "Enter National ID",
-  "enter_personal_id": "Enter Personal ID",
-  "note": "Note",
-  "company_note": "Make sure the company information and website are correct.",
-  "identity_note": "Make sure the ID number is correct.",
-  "fill_required_fields": "Please fill in all required fields",
-  "fill_company_fields": "Please fill in all company fields",
-  "fill_identity_fields": "Please fill in all identity fields",
-  "request_sent_successfully": "Your request has been sent successfully! We'll review your request soon",
-  "error_sending_request": "An error occurred while sending the request",
-  "company_website_placeholder": "https://example.com",
+  "contact_errors": {
+    "email_config_incomplete": "Email configuration is incomplete. Please contact administration.",
+    "contact_page_unavailable": "Contact page is currently unavailable. Please try again later.",
+    "generic_error": "Failed to send message. Please try again."
+  },
+  "confirm_role_change_title": "Confirm Role Change",
+  "confirm_role_change_message": "Do you really want to change the user's role to",
+  "host_dashboard": {
+    "title": "Host Dashboard",
+    "subtitle": "Welcome to your host dashboard",
+    "manage_properties_title": "Manage Properties",
+    "manage_properties_description": "View, edit, and delete your properties",
+    "manage_reservations_title": "Manage Reservations",
+    "manage_reservations_description": "View, confirm, and cancel reservations",
+    "add_property_title": "Add New Property",
+    "add_property_description": "Add a new property to your listings",
+    "statistics_title": "Statistics",
+    "properties_count": "Properties Count",
+    "total_reservations": "Total Reservations",
+    "total_revenue": "Total Revenue"
+  },
+  "manage_properties": "Manage Properties",
+  "manage_reservations": "Manage Reservations",
+  "add_new_property": "Add New Property",
+  "host_dashboard_button": "Host Dashboard",
   "become_host": "Become a Host",
-  "request_pending": "Request Pending",
-  "switch_to_guest": "Switch to Guest",
-  "switch_to_host": "Switch to Host",
+  "request_pending_message": "Your request is under review",
+  "request_rejected_message": "Your request was rejected",
   "request_rejected": "Request Rejected",
-  "request_pending_message": "Your request is under review. We'll contact you soon!",
-  "request_rejected_message": "Your request was rejected. Please contact the administration."
+  "admin_dashboard": {
+    "title": "Admin Dashboard",
+    "search_placeholder": "Search in users, properties, reservations...",
+    "last_7_days": "Last 7 days",
+    "last_30_days": "Last 30 days",
+    "last_90_days": "Last 90 days",
+    "all_time": "All time",
+    "auto_refresh": "Auto refresh",
+    "refreshing": "Refreshing",
+    "refresh": "Refresh",
+    "total_users": "Total Users",
+    "total_properties": "Total Properties",
+    "total_reservations": "Total Reservations",
+    "total_payments": "Total Payments",
+    "revenue": "Revenue",
+    "reservations_by_month": "Reservations by Month",
+    "revenue_by_month": "Revenue by Month",
+    "line": "Line",
+    "bars": "Bars",
+    "latest_users": "Latest Users",
+    "latest_properties": "Latest Properties",
+    "latest_reservations": "Latest Reservations",
+    "latest_payments": "Latest Payments",
+    "from": "of",
+    "updating_dashboard": "Updating dashboard data...",
+    "failed_to_load": "Failed to load dashboard data. Please try again.",
+    "failed_to_load_dashboard": "Failed to load dashboard data."
+  },
+  "admin_sidebar": {
+    "dashboard": "Dashboard",
+    "dashboard_description": "System overview",
+    "users": "Users",
+    "users_description": "Manage users",
+    "properties": "Properties",
+    "properties_description": "Manage properties",
+    "reservations": "Reservations",
+    "reservations_description": "Manage reservations",
+    "payments": "Payments",
+    "payments_description": "Manage payments",
+    "host_requests": "Host Requests",
+    "host_requests_description": "Manage host join requests",
+    "user_menu": "User Menu",
+    "user": "User",
+    "back_to_main_site": "Back to Main Site",
+    "back_to_site": "Back to Site",
+    "logout": "Logout",
+    "dashboard_cards": {
+      "users": "Users",
+      "properties": "Properties",
+      "reservations": "Reservations",
+      "revenue": "Revenue",
+      "error_loading": "⚠️ Error loading statistics cards."
+    }
+  },
+  "admin_host_requests": {
+    "title": "Host Join Requests",
+    "description": "Manage user requests to join as hosts",
+    "no_requests": "No host requests",
+    "no_requests_description": "No requests to join as hosts have been submitted yet.",
+    "user": "User",
+    "request_type": "Request Type",
+    "full_name": "Full Name",
+    "email": "Email",
+    "phone": "Phone",
+    "status": "Status",
+    "request_date": "Request Date",
+    "details": "Details",
+    "actions": "Actions",
+    "no_name": "No Name",
+    "user_alt": "User",
+    "failed_to_load": "Failed to load host requests"
+  },
+  "properties": {
+    "title": "My Properties",
+    "subtitle": "List of your properties"
+  },
+  "refresh_data": "Refresh Data",
+  "request_pending": "Pending",
+  "request_approved": "Approved",
+  "personal": "Personal",
+  "business_or_office": "Business or Office",
+  "not_specified": "Not Specified",
+  "remove_all_filters": "Remove All Filters",
+  "no_trips_found": "No trips found",
+  "no_trips_subtitle": "Looks like you have not booked any trips.",
+  "reservation_validation": {
+    "total_price_required": "Total price is required",
+    "start_date_required": "Start date is required",
+    "end_date_required": "End date is required",
+    "days_required": "Number of days is required",
+    "listing_id_required": "Listing ID is required",
+    "listing_title_required": "Listing title is required",
+    "price_per_night_required": "Price per night is required",
+    "location_required": "Location is required",
+    "image_required": "Listing image is required",
+    "user_id_required": "User ID is required",
+    "user_email_required": "User email is required",
+    "user_name_required": "User name is required",
+    "reservation_data_missing": "Reservation data is missing",
+    "user_data_required": "User data is required",
+    "invalid_dates": "Invalid dates"
+  }
 }
