--- a/Web_code/locales/locales/ar/common.json
+++ b/Web_code/locales/locales/ar/common.json
@@ -586,6 +586,9 @@
     "select_at_least_one_night": "يرجى اختيار إقامة ليلة واحدة على الأقل",
     "reserve": "احجز",
     "wont_be_charged": "لن يتم خصم المبلغ بعد",
+    "available_days": "أيام متاحة للحجز (الغير مظللة)",
+    "booked_days": "أيام محجوزة(المظللة)",
+    "calendar_legend": "دليل التقويم",
     "report_listing": "الإبلاغ عن هذا الإعلان"
   },
   "listing_offer": {
@@ -636,6 +639,7 @@
     "category_required": "الفئة مطلوبة",
     "offers_required": "مطلوب عرض واحد على الأقل",
     "location_required": "الموقع مطلوب",
+    "selected_category": "الفئة المختارة:",
     "steps": {
       "category": "الفئة",
       "offers": "المرافق",
@@ -674,8 +678,7 @@
     "tip_pricing": "💡 نصيحة: ابحث عن عقارات مماثلة في منطقتك لتحديد سعر تنافسي",
     "create_listing_header": "إنشاء إعلانك",
     "create_listing_subheader": "دعنا نجعل عقارك جاهزاً للضيوف",
-    "price_help": "أدخل السعر بالدينار الليبي (أرقام فقط)",
-    "selected_category": "الفئة المختارة:"
+    "price_help": "أدخل السعر بالدينار الليبي (أرقام فقط)"
   },
   "reviews": {
     "title": "التقييمات",
@@ -714,7 +717,8 @@
     "communication": "التواصل",
     "location": "الموقع",
     "value": "القيمة",
-    "overall": "التقييم العام"
+    "overall": "التقييم العام",
+    "detailed": "التقييمات التفصيلية"
   },
   "guest_favourite": {
     "title": "المفضلة لدى الضيوف",
@@ -867,7 +871,8 @@
     "actions": "الإجراءات",
     "no_name": "بدون اسم",
     "user_alt": "مستخدم",
-    "failed_to_load": "فشل في جلب طلبات المضيف"
+    "failed_to_load": "فشل في جلب طلبات المضيف",
+    "note": "يمكنك الموافقة أو رفض الطلبات المعلقة فقط"
   },
   "properties": {
     "title": "عقاراتي",
@@ -925,5 +930,37 @@
     "description_max_length": "يجب ألا يتجاوز الوصف 500 حرف",
     "price_min": "يجب أن يكون السعر 1 دينار على الأقل",
     "price_max": "يجب ألا يتجاوز السعر 10000 دينار"
-  }
+  },
+  "host_request_title": "طلب الانضمام كمضيف",
+  "host_request_subtitle": "شارك بعض المعلومات الأساسية حول نفسك ولماذا تريد أن تصبح مضيفاً.",
+  "host_request_description": "نحن متحمسون لأنك مهتم بأن تصبح مضيفاً على منصتنا! لمساعدتنا في فهم دوافعك بشكل أفضل، يرجى مشاركة بعض المعلومات الأساسية حول نفسك ولماذا ترغب في الانضمام كمضيف. هذا سيساعدنا في ضمان تقديم أفضل تجربة ممكنة لكل من المضيفين والضيوف.",
+  "full_name": "الاسم الكامل",
+  "identity_note": "يرجى تقديم اسمك الكامل كما هو موضح في بطاقة الهوية أو جواز السفر.",
+  "request_type": "نوع الطلب",
+  "identity_information": "معلومات الهوية",
+  "id_card_type": "نوع بطاقة الهوية",
+  "national_id": "بطاقة الهوية الوطنية",
+  "personal_id": "بطاقة شخصية",
+  "id_card_number": "رقم بطاقة الهوية",
+  "send_request": "إرسال الطلب",
+  "sending_request": "جاري إرسال الطلب...",
+  "request_sent_success": "تم إرسال طلبك بنجاح! سنراجعه ونرد عليك قريباً.",
+  "company_information": "معلومات الشركة",
+  "company_name": "اسم الشركة",
+  "company_website": "موقع الشركة الإلكتروني",
+  "company_note": "يرجى تقديم اسم شركتك وموقعها الإلكتروني إذا كان ذلك ينطبق.",
+  "company_website_required": "موقع الشركة الإلكتروني مطلوب",
+  "company_website_invalid_format": "يرجى إدخال موقع إلكتروني صحيح",
+  "company_name_min_length": "يجب أن يكون اسم الشركة 2 حرف على الأقل",
+  "company_name_max_length": "يجب ألا يتجاوز اسم الشركة 100 حرف",
+  "company_name_required": "اسم الشركة مطلوب",
+  "detailed_ratings": "التقييمات التفصيلية",
+  "your_own_review": "تقييمك الخاص",
+  "be_first_to_review": "كن أول من يشارك تجربته مع هذا المكان",
+  "be_first": "كن أول من يكتب تقييماً",
+  "from": "من",
+  "confirm_delete_review": "تأكيد حذف التقييم",
+  "confirm_delete_review_description": "هل أنت متأكد من أنك تريد حذف هذا التقييم؟ لا يمكن التراجع عن هذا الإجراء.",
+  "delete_review": "حذف التقييم",
+  "delete_review_warning": "سيتم حذف التقييم نهائياً ولن يتمكن المستخدمون الآخرون من رؤيته."
 }
